moved headless config of surefire to dedicated profile to not affect tests unless requested explicitly