@@ -256,12 +256,6 @@
               <exclude>**/*IntegrationTest.java</exclude>
             </excludes>
             <argLine>-Xmx1024m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8</argLine>
-            <systemProperties>
-              <property>
-                <name>java.awt.headless</name>
-                <value>true</value>
-              </property>
-            </systemProperties>
           </configuration>
         </plugin>
         <plugin>
@@ -692,6 +686,38 @@
         <!-- Stop m2eclipse from continuously regenerating the OSGi manifest timestamp every second -->
         <osgi.snapshot.qualifier>qualifier</osgi.snapshot.qualifier>
       </properties>
+    </profile>
+    <profile>
+      <id>headless</id>
+      <activation>
+        <property>
+          <name>headless</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.15</version>
+            <configuration>
+              <includes>
+                <include>**/*Test.java</include>
+              </includes>
+              <excludes>
+                <exclude>**/*IntegrationTest.java</exclude>
+              </excludes>
+              <argLine>-Xmx1024m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8</argLine>
+              <systemProperties>
+                <property>
+                  <name>java.awt.headless</name>
+                  <value>true</value>
+                </property>
+              </systemProperties>
+            </configuration>
+           </plugin>
+        </plugins>
+      </build>
     </profile>
   </profiles>
 
